implement children method for AstNode and create a way to dump the AST tree

--- a/explorer/interpreter/BUILD
+++ b/explorer/interpreter/BUILD
@@ -72,6 +72,7 @@ cc_library(
         "//common:ostream",
         "//explorer/ast",
         "//explorer/base:arena",
+        "//explorer/base:print_as_id",
         "//explorer/base:trace_stream",
         "@llvm-project//llvm:Support",
     ],
